@startuml

title __DOMOTIX > VIEW > MENUS's Class Diagram__\n

namespace src.domotix.view.menus {
    class src.domotix.view.menus.MenuErroreApertura {
    }

    class src.domotix.view.menus.MenuErroreChiusura {
    }

    class src.domotix.view.menus.MenuAzioniConflitto {
    }

    class src.domotix.view.menus.MenuLogin {
    }

    namespace menuPrincipale {
        class src.domotix.view.menus.menuPrincipale.MenuFruitore {
        }

        class src.domotix.view.menus.menuPrincipale.MenuManutentore {
            {static} - INTRO_IMPORT_UNITA : String
            {static} - IMPORT_UNITA_OK : String
            {static} - GUIDA_IN_LINEA : String
            {static} - UNITA_NON_IMPORTATA : String
            {static} - IMPORT_FAILED : String
            {static} - NOTHING_IMPORTED : String
        }
    }

    namespace menuCategorie {
        class src.domotix.view.menus.menuCategorie.MenuCategorieF {
        }

        class src.domotix.view.menus.menuCategorie.MenuCategorieM {
        }

        namespace sensori {
            class src.domotix.view.menus.menuCategorie.sensori.MenuCategorieSensoriF {
            }

            class src.domotix.view.menus.menuCategorie.sensori.MenuCategorieSensoriM {
                {static} - INTRO_IMPORT_CAT_SENS : String
                {static} - GUIDA_IN_LINEA : String
                {static} - CATEGORIA_NON_IMPORTATA : String
                {static} - IMPORT_CAT_SES_OK : String
                {static} - IMPORT_FAILED : String
                {static} - NOTHING_IMPORTED : String
            }
        }

        namespace attuatori {
            class src.domotix.view.menus.menuCategorie.attuatori.MenuCategorieAttuatoriF {
            }

            class src.domotix.view.menus.menuCategorie.attuatori.MenuCategorieAttuatoriM {
                {static} - INTRO_IMPORT_CAT_ATT : String
                {static} - CATEGORIA_NON_IMPORTATA : String
                {static} - IMPORT_CAT_ATT_OK : String
                {static} - IMPORT_FAILED : String
                {static} - NOTHING_IMPORTED : String
            }
        }
    }

    namespace menuUnita {
    }
}

src.domotix.view.menus.MenuLogin --> src.domotix.view.menus.menuPrincipale
src.domotix.view.menus.menuPrincipale.MenuManutentore --> src.domotix.view.menus.menuUnita.MenuUnitaM
src.domotix.view.menus.menuPrincipale.MenuFruitore --> src.domotix.view.menus.menuUnita.MenuUnitaF
src.domotix.view.menus.menuPrincipale.MenuManutentore --> src.domotix.view.menus.menuCategorie.MenuCategorieM
src.domotix.view.menus.menuPrincipale.MenuFruitore --> src.domotix.view.menus.menuCategorie.MenuCategorieF
src.domotix.view.menus.menuCategorie.MenuCategorieM --> src.domotix.view.menus.menuCategorie.attuatori.MenuCategorieAttuatoriM
src.domotix.view.menus.menuCategorie.MenuCategorieM --> src.domotix.view.menus.menuCategorie.sensori.MenuCategorieSensoriM
src.domotix.view.menus.menuCategorie.MenuCategorieF --> src.domotix.view.menus.menuCategorie.attuatori.MenuCategorieAttuatoriF
src.domotix.view.menus.menuCategorie.MenuCategorieF --> src.domotix.view.menus.menuCategorie.sensori.MenuCategorieSensoriF

src.domotix.view.menus.menuCategorie.attuatori.MenuCategorieAttuatoriM --> src.domotix.controller.Modificatore
src.domotix.view.menus.menuCategorie.attuatori.MenuCategorieAttuatoriM --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuCategorie.attuatori.MenuCategorieAttuatoriF --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuCategorie.sensori.MenuCategorieSensoriM --> src.domotix.controller.Modificatore
src.domotix.view.menus.menuCategorie.sensori.MenuCategorieSensoriM --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuCategorie.sensori.MenuCategorieSensoriF --> src.domotix.controller.Recuperatore
src.domotix.view.menus.menuPrincipale.MenuManutentore --> src.domotix.controller.Modificatore

@enduml
